# SomniFlow

./: .gitignore  README.md  add_context_to_qg_index.py  bulk_upload_chunks.py  generate_evaluate_dataset.py  main.py  package-lock.json  pyproject.toml  run_data_pipeline.py  run_doc_pipeline.py  test_graph.py  vectorstore.py
backend/: config.py  database.py  main.py  redis.py  schemas.py
backend/api/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
backend/auth/: config.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
config/: logging_dict_config.json  searxng-settings.yml
frontend/: next.config.ts  package-lock.json  package.json  types.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: Chat.tsx  ChatWindow.tsx  DeleteChat.tsx  EmptyChat.tsx  EmptyChatMessageInput.tsx  MessageBox.tsx  MessageInput.tsx  MessageSources.tsx  Navbar.tsx  Sidebar.tsx  ThinkBox.tsx
frontend/components/theme/: Provider.tsx  Switcher.tsx
frontend/components/ui/: Select.tsx
my-frontend/: next.config.ts  package-lock.json  package.json
my-frontend/app/: layout.tsx  page.tsx
my-frontend/app/register/: page.tsx
my-frontend/app/settings/: page.tsx
my-frontend/components/: AppSidebar.tsx  ChatInputBox.tsx  Login.tsx  Register.tsx  Settings.tsx
my-frontend/components/ui/: spinner.tsx
my-frontend/hooks/: useAuth.ts
my-frontend/lib/: utils.ts
src/agents/base/: __init__.py  models.py
src/agents/factor/: __init__.py  builder.py  nodes.py  prompts.py  states.py
src/agents/harm/: __init__.py  builder.py  nodes.py  prompts.py  states.py
src/agents/response/: nodes.py  prompts.py
src/agents/suggestion/: __init__.py  builder.py  nodes.py  prompts.py  states.py
src/agents/supervisor/: models.py  nodes.py  prompts.py
src/common/chunking/: __init__.py  late_chunking.py
src/common/llm/: __init__.py  agent.py  utils.py
src/common/logging/: __init__.py  formatters.py  handlers.py  setup.py
src/data_pipeline/: chunking.py  config.py  pipeline.py  serializers.py  utils.py
src/data_pipeline/converters/: base.py  (+3 more)
src/doc_pipeline/: config.py  pipeline.py  serializers.py  utils.py
src/graph/: builder.py  states.py
src/lmchunker/: chunker.py
src/tools/: __init__.py
(+64 files in other folders)
