[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "crawl4ai>=0.5.0.post8",
    "einops>=0.8.1",
    "flagembedding>=1.3.4",
    "ipykernel>=6.29.5",
    "langgraph>=0.3.31",
    "peft>=0.15.2",
    "pydantic-ai>=0.1.3",
    "qdrant-client>=1.13.3",
    "torch>=2.6.0",
]
