[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "crawl4ai>=0.5.0.post8",
    "einops>=0.8.1",
    "fastapi>=0.115.12",
    "fastembed>=0.4.2",
    "flagembedding>=1.3.4",
    "ipykernel>=6.29.5",
    "jieba>=0.42.1",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.3.31",
    "langgraph-checkpoint-postgres>=2.0.21",
    "peft>=0.15.2",
    "pip>=25.1",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.7",
    "pydantic-ai>=0.1.3",
    "qdrant-client>=1.12.1",
    "regex>=2023.12.25",
    "semantic-chunkers>=0.0.10",
    "spacy>=3.8.5",
    "torch>=2.6.0",
]
