[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "asyncpg>=0.30.0",
    "authlib>=1.6.0",
    "bcrypt==4.0.1",
    "crawl4ai>=0.5.0.post8",
    "docling>=2.38.0",
    "einops>=0.8.1",
    "fastapi>=0.115.12",
    "fastembed>=0.4.2",
    "flagembedding>=1.3.4",
    "ipykernel>=6.29.5",
    "itsdangerous>=2.2.0",
    "jieba>=0.42.1",
    "jose>=1.0.0",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.3.31",
    "langgraph-checkpoint-postgres>=2.0.21",
    "passlib>=1.7.4",
    "peft>=0.15.2",
    "pip>=25.1",
    "psycopg-pool>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.7",
    "pydantic-ai>=0.1.3",
    "pydantic[email]>=2.11.4",
    "pyjwt>=2.10.1",
    "pyppeteer>=0.0.25",
    "qdrant-client>=1.12.1",
    "redis>=6.2.0",
    "regex>=2023.12.25",
    "semantic-chunkers>=0.0.10",
    "spacy>=3.8.5",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "torch>=2.6.0",
]
